--- a/index.html
+++ b/index.html
@@ -76,22 +76,11 @@
                     https://twitch.tv/infoblock
                 </p>
             </div>
-			
-			<!-- FIELD FOUR -->
-			
-			<div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://twitter.com/InfoBlock3')">
-                <div class="flex">
-                    <img src="cdn/field_4.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Twitter</span>
-                </div>
-                <p class="text-gray-400 mt-2">
-                    Check me out on Twitter!
-                </p>
-                <p class="text-blue-300 mt-2">
-                    https://twitter.com/InfoBlock3
-                </p>
-            </div>
             
             <br><br><br>
+            <a class="text-gray-500">Thanks to Luna for providing the Template that was used for this Website!</a>
+            <br>
+            <a class="text-gray-500">Copyright &copy; InfoBlock.gq 2021</a>
         </div>
     </body>
 </html>
