--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <br><br><br>
             <a class="text-gray-500">Thanks to Luna for providing the Template that was used for this Website!</a>
             <br>
-            <a class="text-gray-500">Copyright &copy; InfoBlock.gq 2021</a>
+            <a class="text-gray-500">Copyright &copy; InfoBlock.gq & Luna</a>
         </div>
     </body>
 </html>
