--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="description" content="Web & Discord Bot Dev" />
 
         <meta name="twitter:site" content="@InfoBlock3" />
-        <meta name="twitter:title" content="InfoBlock.gq" />
+        <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Web & Discord Bot Dev" />
         <meta name="twitter:image" content="https://i.imgur.com/HhVAM3d.png" />
 
-        <meta property='og:title' content='InfoBlock.gq' />
+        <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Web & Discord Bot Dev' />
         <meta property="og:image" content='https://i.imgur.com/HhVAM3d.png' />
@@ -62,10 +62,10 @@
                     https://github.com/InfoBlock
                 </p>
             </div>
-			
-			<!-- FIELD THREE -->
-			
-			<div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://twitch.tv/infoblock')">
+
+            <!-- FIELD THREE -->
+
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://twitch.tv/infoblock')">
                 <div class="flex">
                     <img src="cdn/field_3.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Twitch</span>
                 </div>
@@ -78,9 +78,11 @@
             </div>
             
             <br><br><br>
-            <a class="text-gray-500">Thanks to Luna for providing the Template that was used for this Website!</a>
-            <br>
-            <a class="text-gray-500">Copyright &copy; InfoBlock.gq & Luna</a>
+
+            <a class="text-gray-500">Template by Luna</a>
+            <a class="text-gray-500">Copyright &copy; InfoBlock & Luna</a>
+            <a class="text-gray-500" href="./terms/index.html">Terms of Services</a>
+            <a class="text-gray-500" href="./privacy/index.html">Privacy Policy</a>
         </div>
     </body>
 </html>
