--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <a class="text-gray-500">Template by Luna</a>
             <a class="text-gray-500">Copyright &copy; InfoBlock & Luna</a>
-            <a class="text-gray-500" href="./terms/index.html">Terms of Services</a>
+            <a class="text-gray-500" href="./terms/index.html">Terms of Service</a>
             <a class="text-gray-500" href="./privacy/index.html">Privacy Policy</a>
         </div>
     </body>
