--- a/index.html
+++ b/index.html
@@ -77,12 +77,25 @@
                 </p>
             </div>
             
+            <!-- FIELD FOUR -->
+
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('./blockai/')">
+                <div class="flex">
+                    <img src="cdn/field_4.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Block A.I.</span>
+                </div>
+                <p class="text-gray-400 mt-2">
+                    Check out my Discord Chat Bot!
+                </p>
+                <p class="text-blue-300 mt-2">
+                    <a href="./blockai/">Click here</a>
+                </p>
+            </div>
+            
             <br><br><br>
 
-            <a class="text-gray-500">Template by Luna</a>
             <a class="text-gray-500">Copyright &copy; InfoBlock & Luna</a>
-            <a class="text-gray-500" href="./terms/index.html">Terms of Service</a>
-            <a class="text-gray-500" href="./privacy/index.html">Privacy Policy</a>
+            <a class="text-gray-500" href="./terms/">Terms of Service</a>
+            <a class="text-gray-500" href="./privacy/">Privacy Policy</a>
         </div>
     </body>
 </html>
