--- a/index.html
+++ b/index.html
@@ -87,7 +87,21 @@
                     Check out my Discord Chat Bot!
                 </p>
                 <p class="text-blue-300 mt-2">
-                    <a href="./blockai/">Click here</a>
+                    Click here
+                </p>
+            </div>
+
+            <!-- FIELD FIVE -->
+
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('./animerp/')">
+                <div class="flex">
+                    <img src="animerp/Anime RP.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Anime RP</span>
+                </div>
+                <p class="text-gray-400 mt-">
+                    Check out Anime RP!
+                </p>
+                <p class="text-blue-300 mt-2">
+                    Click here
                 </p>
             </div>
             
