--- a/terms/index.html
+++ b/terms/index.html
@@ -8,12 +8,12 @@
         <meta name="twitter:site" content="@InfoBlock3" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Terms of Service" />
-        <meta name="twitter:image" content="https://i.imgur.com/HhVAM3d.png" />
+        <meta name="twitter:image" content="https://i.imgur.com/wyg2pNi.png" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Terms of Service' />
-        <meta property="og:image" content='https://i.imgur.com/HhVAM3d.png' />
+        <meta property="og:image" content='https://i.imgur.com/wyg2pNi.png' />
         <meta name="theme-color" content="#6B21A8" />
 
 
@@ -22,23 +22,23 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>InfoBlock</title>
-        <link rel="shortcut icon" href="../cdn/me.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../cdn/logo.png" type="image/x-icon">
     </head>
     
     <body class="pt-40 p-0 bg-gray-900 text-white">
 
         <div class="text-center md:w-1/2 w-screen select-none">
-            <a class="text-6xl font-semibold" href="../index.html">InfoBlock</a> <br>
-            <a class="text-gray-500">Terms of Services</a> <br>
+            <a class="text-6xl font-semibold" href="../">InfoBlock</a> <br>
+            <a class="text-gray-500">Terms of Service</a> <br>
         </div>
         <div class="w-1/2 float-right hidden md:block">
-            <img src="../cdn/me.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
+            <img src="../cdn/logo.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
         </div>
         <div class="px-20 w-screen" id="list">
             <a class="text-gray-400">
                 1. Terms
                 <br>
-By accessing this Website, accessible from http://148.251.92.133, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law.
+By accessing this Website, accessible from https://infoblock.github.io/Website/, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law.
                 <br><br>
                 2. Use License
                 <br>
