Updated the Logo

--- a/blockai/index.html
+++ b/blockai/index.html
@@ -8,12 +8,12 @@
         <meta name="twitter:site" content="@InfoBlock3" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Block A.I." />
-        <meta name="twitter:image" content="https://i.imgur.com/HhVAM3d.png" />
+        <meta name="twitter:image" content="https://i.imgur.com/wyg2pNi.png" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Block A.I.' />
-        <meta property="og:image" content='https://i.imgur.com/HhVAM3d.png' />
+        <meta property="og:image" content='https://i.imgur.com/wyg2pNi.png' />
         <meta name="theme-color" content="#6B21A8" />
 
 
@@ -22,7 +22,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>InfoBlock</title>
-        <link rel="shortcut icon" href="../cdn/me.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../cdn/logo.png" type="image/x-icon">
     </head>
     
     <body class="pt-40 p-0 bg-gray-900 text-white">
