--- a/blockai/index.html
+++ b/blockai/index.html
@@ -32,7 +32,7 @@
             <a class="text-gray-500">Block A.I.</a> <br>
         </div>
         <div class="w-1/2 float-right hidden md:block">
-            <img src="../cdn/me.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
+            <img src="../cdn/logo.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
         </div>
         <div class="px-20 w-screen" id="list">
             <a class="text-gray-400">
