--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TruckersMP | VTC</span>
                 </div>
                 <p class="text-gray-400 mt-2">
-                    Here you can check me out the VTC I'm currently in
+                    Here you can check out the VTC I'm currently in
                 </p>
                 <p class="text-blue-300 mt-2">
                     https://truckersmp.com/vtc/prime
