Switched Field Seven and Field Eight

--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
             </div>
 
             <!-- FIELD EIGHT-->
-            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/vtc/47870')">
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/events/8050')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TruckersMP | WST</span>
+                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TruckersMP | Birthday Convoy</span>
                 </div>
                 <p class="text-gray-400 mt-2">
-                    Here you can check out the VTC "West-Süd Transporte"
+                    Here you can visit my Birthday Convoy in December
                 </p>
                 <p class="text-blue-300 mt-2">
-                    https://truckersmp.com/vtc/47870
+                    https://truckersmp.com/events/8050
                 </p>
             </div>
             
