--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- FIELD SEVEN -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/vtc/47870')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TruckersMP | WST</span>
+                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TruckersMP | West-Süd Transporte</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     Here you can check out the VTC "West-Süd Transporte"
