--- a/index.html
+++ b/index.html
@@ -103,10 +103,13 @@
             <!-- FIELD SIX -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/vtc/prime')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TruckersMP | VTC</span>
+                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | Prime Logistics</span>
                 </div>
+                <p class="text-blue-300 mt-2">
+                    My current VTC
+                </p>
                 <p class="text-gray-400 mt-2">
-                    Here you can check out the VTC I'm currently in
+                    You Call. We Haul. That's All.
                 </p>
                 <p class="text-blue-300 mt-2">
                     https://truckersmp.com/vtc/prime
@@ -116,10 +119,10 @@
             <!-- FIELD SEVEN -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/vtc/47870')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TruckersMP | West-Süd Transporte</span>
+                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | West-Süd Transporte</span>
                 </div>
                 <p class="text-gray-400 mt-2">
-                    Here you can check out the VTC "West-Süd Transporte"
+                    Ein Ziel, Eine Leidenschaft - West Süd Transporte
                 </p>
                 <p class="text-blue-300 mt-2">
                     https://truckersmp.com/vtc/47870
@@ -129,10 +132,10 @@
             <!-- FIELD EIGHT-->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/events/8050')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TruckersMP | Birthday Convoy</span>
+                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | Birthday Convoy</span>
                 </div>
                 <p class="text-gray-400 mt-2">
-                    Here you can visit my Birthday Convoy in December
+                    Sign up for my Birthday Convoy in December
                 </p>
                 <p class="text-blue-300 mt-2">
                     https://truckersmp.com/events/8050
