--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <!-- FIELD FIVE -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/user/2515622')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TruckersMP | My Profile</span>
+                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | My Profile</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     Here you can check me out on TruckersMP
@@ -105,9 +105,9 @@
                 <div class="flex">
                     <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | Prime Logistics</span>
                 </div>
-                <p class="text-blue-300 mt-2">
-                    My current VTC
-                </p>
+                <div class="flex">
+                    <span class="font-bold ml-3 mt-2">Ths is my current VTC!</span>
+                </div>
                 <p class="text-gray-400 mt-2">
                     You Call. We Haul. That's All.
                 </p>
