--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | Prime Logistics</span>
                 </div>
                 <div class="flex">
-                    <span class="font-bold ml-3 mt-2">Ths is my current VTC!</span>
+                    <span class="font-bold ml-3 mt-2">This is my current VTC!</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     You Call. We Haul. That's All.
