--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- FIELD ONE -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://discord.gg/zWFW6yg')">
                 <div class="flex">
-                    <img src="cdn/field_1.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Discord</span>
+                    <img src="cdn/Discord.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Discord</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     Join my Discord Server!
@@ -51,7 +51,7 @@
             <!-- FIELD TWO -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://twitch.tv/infoblock')">
                 <div class="flex">
-                    <img src="cdn/field_2.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Twitch</span>
+                    <img src="cdn/Twitch.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Twitch</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     Check me out on Twitch!
@@ -62,9 +62,22 @@
             </div>
             
             <!-- FIELD THREE -->
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://twitter.com/InfoBlock4')">
+                <div class="flex">
+                    <img src="cdn/Twitter.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Twitter</span>
+                </div>
+                <p class="text-gray-400 mt-2">
+                    Check me out on Twitter!.
+                </p>
+                <p class="text-blue-300 mt-2">
+                    https://twitter.com/InfoBlock4
+                </p>
+            </div>
+
+            <!-- FIELD FOUR -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('./blockai/')">
                 <div class="flex">
-                    <img src="cdn/field_3.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Block A.I.</span>
+                    <img src="cdn/Block_AI.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Block A.I.</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     Check out my Discord Chat Bot!
@@ -74,23 +87,10 @@
                 </p>
             </div>
 
-            <!-- FIELD FOUR -->
-            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://uxhill.com')">
-                <div class="flex">
-                    <img src="cdn/field_4.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">uxhill.com</span>
-                </div>
-                <p class="text-gray-400 mt-2">
-                    The best Sandbox Game that I know! Go ahead and play it.
-                </p>
-                <p class="text-blue-300 mt-2">
-                    https://uxhill.com
-                </p>
-            </div>
-
             <!-- FIELD FIVE -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/user/2515622')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | My Profile</span>
+                    <img src="cdn/tmp_logo_black.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | My Profile</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     Here you can check me out on TruckersMP
@@ -103,7 +103,7 @@
             <!-- FIELD SIX -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/vtc/prime')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | Prime Logistics</span>
+                    <img src="cdn/tmp_logo_black.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | Prime Logistics</span>
                 </div>
                 <div class="flex">
                     <span class="font-bold ml-3 mt-2">This is my current VTC!</span>
@@ -119,7 +119,7 @@
             <!-- FIELD SEVEN -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/vtc/47870')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | West-Süd Transporte</span>
+                    <img src="cdn/tmp_logo_black.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | West-Süd Transporte</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     Ein Ziel, Eine Leidenschaft - West Süd Transporte
@@ -132,7 +132,7 @@
             <!-- FIELD EIGHT-->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://truckersmp.com/events/8050')">
                 <div class="flex">
-                    <img src="https://i.imgur.com/k9qGYXN.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | Birthday Convoy</span>
+                    <img src="cdn/tmp_logo_black.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP | Birthday Convoy</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     Sign up for my Birthday Convoy in December
