Fixed Icons not showing

--- a/reports/index.html
+++ b/reports/index.html
@@ -37,7 +37,7 @@
         <div class="px-20 w-screen" id="list">
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around"">
                 <div class="flex">
-                    <img src="../cdn/tmp_logo.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP ID: 4860303</span>
+                    <img src="../cdn/tmp_logo_black.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP ID: 4860303</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     <iframe title="vimeo-player" src="https://player.vimeo.com/video/685090517?h=676889711a" frameborder="0" allowfullscreen></iframe>
@@ -52,7 +52,7 @@
 
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around"">
                 <div class="flex">
-                    <img src="../cdn/tmp_logo.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP ID: 4182025</span>
+                    <img src="../cdn/tmp_logo_black.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">TMP ID: 4182025</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     <iframe title="vimeo-player" src="https://player.vimeo.com/video/685645947?h=676889711a" frameborder="0" allowfullscreen></iframe>
