--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- FIELD FOUR -->
             <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('./blockai/')">
                 <div class="flex">
-                    <img src="cdn/Block_AI.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Block A.I.</span>
+                    <img src="cdn/Block_AI_Ukraine.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Block A.I.</span>
                 </div>
                 <p class="text-gray-400 mt-2">
                     Check out my Discord Chat Bot!
