--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <!-- FIELD FOUR -->
-            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('./blockai/')">
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://discordbotlist.com/bots/block-ai')">
                 <div class="flex">
                     <img src="cdn/Block_AI_Ukraine.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Block A.I.</span>
                 </div>
