Twitch Page added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
 
             <!-- FIELD TWO -->
-            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://twitch.tv/infoblock')">
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('./twitch')">
                 <div class="flex">
                     <img src="cdn/Twitch.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Twitch</span>
                 </div>
@@ -57,7 +57,7 @@
                     Check me out on Twitch!
                 </p>
                 <p class="text-blue-300 mt-2">
-                    https://twitch.tv/infoblock
+                    Click here
                 </p>
             </div>
             
@@ -75,7 +75,7 @@
             </div>
 
             <!-- FIELD FOUR -->
-            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://discordbotlist.com/bots/block-ai')">
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('./blockai/')">
                 <div class="flex">
                     <img src="cdn/Block_AI_Ukraine.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Block A.I.</span>
                 </div>
