--- a/twitch/index.html
+++ b/twitch/index.html
@@ -18,7 +18,7 @@
 
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.0/tailwind.min.css">
-        <link rel="stylesheet" href="../twitch.css">
+        <link rel="stylesheet" href="../style.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>InfoBlock</title>
@@ -27,23 +27,29 @@
     
     <body class="pt-40 p-0 bg-gray-900 text-white">
 
-        <div class="text-center md:w-1/2 w-screen select-none"">
-            <a class="text-6xl font-semibold" href="../">InfoBlock</a> <br>
-            <a class="text-gray-500">Twitch Stream</a> <br><br>
-            <a class="text-gray-500">Click on my Name to get back to the Main Page</a> <br>
-        </div>
         <div class="w-1/2 float-right hidden md:block">
             <img src="../cdn/logo.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
         </div>
         <div class="px-20 w-screen" id="list">
-            <iframe
-                src="https://player.twitch.tv/?channel=infoblock&parent=infoblock.gq&autoplay=false"
-                frameborder="0"
-                scrolling="no"
-                allowfullscreen="true"
-                height="100%"
-                width="100%">
-            </iframe>
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://twitch.tv/infoblock')">
+                <div class="flex">
+                    <img src="../cdn/Twitch.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Twitch Stream</span>
+                </div>
+                <p class="text-gray-400 mt-2">
+                    This is still an work in progress!
+                </p>
+                <p class="text-blue-300 mt-2">
+                    Click here to be redirected to Twitch
+                </p>
+            </div>
+
+            <div class="flex"></div><div class="flex"></div>
+            
+            <br><br><br>
+
+            <a class="text-gray-500">Copyright &copy; InfoBlock</a>
+            <a class="text-gray-500" href="../terms/">Terms of Service</a>
+            <a class="text-gray-500" href="../privacy/">Privacy Policy</a>
         </div>
     </body>
 </html>
