--- a/blockai/index.html
+++ b/blockai/index.html
@@ -22,7 +22,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>InfoBlock</title>
-        <link rel="shortcut icon" href="../cdn/me.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../cdn/logo.png" type="image/x-icon">
     </head>
     
     <body class="pt-40 p-0 bg-gray-900 text-white">
@@ -32,7 +32,7 @@
             <a class="text-gray-500">Block A.I.</a> <br>
         </div>
         <div class="w-1/2 float-right hidden md:block">
-            <img src="../cdn/me.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
+            <img src="../cdn/logo.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
         </div>
         <div class="px-20 w-screen" id="list">
             <a class="text-gray-400">
