--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
             </div>
 
             <!-- FIELD FOUR -->
-            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('./blockai/')">
+            <div class="card bg-gray-100 rounded-lg bg-gray-800 hover:shadow-xl p-5 content-around" onclick="window.open('https://spedition-perlhuhn.gq')">
                 <div class="flex">
-                    <img src="cdn/Block_AI_Ukraine.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Block A.I.</span>
+                    <img src="https://i.imgur.com/T8lUH2w.png" class="rounded-lg w-10 h-10"><span class="font-bold ml-3 mt-2">Spedition Perlhuhn</span>
                 </div>
                 <p class="text-gray-400 mt-2">
-                    Check out my Discord Chat Bot!
+                    Check out Spedition Perlhuhn, an small Virtual Trucking Company on TruckersMP
                 </p>
                 <p class="text-blue-300 mt-2">
-                    Click here
+                    https://spedition-perlhuhn.gq/
                 </p>
             </div>
             
