--- a/twitch/index.html
+++ b/twitch/index.html
@@ -27,6 +27,10 @@
     
     <body class="pt-40 p-0 bg-gray-900 text-white">
 
+        <div class="text-center md:w-1/2 w-screen select-none">
+            <a class="text-6xl font-semibold">InfoBlock</a> <br>
+            <a class="text-gray-500">Twitch Stream</a> <br>
+        </div>
         <div class="w-1/2 float-right hidden md:block">
             <img src="../cdn/logo.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
         </div>
