--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.0/tailwind.min.css">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/style.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>InfoBlock</title>
@@ -31,7 +31,7 @@
             (function() {
                 setTimeout(function() {
                     window.location="https://infoblock.gq";
-                }, 7000)
+                }, 70000)
             })();
         </script>
     </body>
