--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.0/tailwind.min.css">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/style.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>InfoBlock</title>
@@ -26,6 +26,8 @@
     </head>
     
     <body class="pt-40 p-0 bg-gray-900 text-white">
+        <div id="preloader"></div>
+
         <div class="text-center md:w-1/2 w-screen select-none">
             <a class="text-6xl font-semibold">InfoBlock</a> <br>
             <a class="text-gray-500">Web & Discord Bot Dev</a> <br>
@@ -91,6 +93,9 @@
             <a class="text-gray-500">Copyright &copy; InfoBlock</a>
             <a class="text-gray-500" href="./terms/">Terms of Service</a>
             <a class="text-gray-500" href="./privacy/">Privacy Policy</a>
+
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+            <script src="js/preloader.js"></script>
         </div>
     </body>
 </html>
