--- a/terms/index.html
+++ b/terms/index.html
@@ -18,7 +18,7 @@
 
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.0/tailwind.min.css">
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../css/style.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>InfoBlock</title>
@@ -38,7 +38,7 @@
             <a class="text-gray-400">
                 1. Terms
                 <br>
-By accessing this Website, accessible from https://infoblock.github.io/Website/, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law.
+                By accessing this Website, accessible from https://infoblock.github.io/Website/, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law.
                 <br><br>
                 2. Use License
                 <br>
