--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./css/style.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>InfoBlock</title>
+        <title>ErrorBlock</title>
         <link rel="shortcut icon" href="./cdn/logo.png" type="image/x-icon">
     </head>
     
