--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <meta name="twitter:site" content="@InfoBlock4" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Web & Discord Bot Dev" />
-        <meta name="twitter:image" content="https://i.imgur.com/wyg2pNi.png" />
+        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo_pride.png" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Web & Discord Bot Dev' />
-        <meta property="og:image" content='https://i.imgur.com/wyg2pNi.png' />
+        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo_pride.png' />
         <meta name="theme-color" content="#6B21A8" />
 
 
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="./css/about-me.css">
         <link rel="stylesheet" href="./css/page.css">
         <link rel="stylesheet" href="./css/cards.css">
+        <link rel="stylesheet" href="./css/pride.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,23 +34,24 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>InfoBlock</title>
-        <link rel="shortcut icon" href="./cdn/logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="./cdn/logo_pride.jpg" type="image/x-icon">
     </head>
     
     <body style="padding: 0rem;">
         <div class="top-padding">
             <div class="pfp-flex">
                 <div class="md:w-1/2 w-screen text-margin">
-                    <text class="name">InfoBlock</text>
+                    <text class="name rainbow-text">InfoBlock</text>
                     <p class="sub-text">
                         <br><br>
+                        <bold class="high-light-text-gray">//</bold> Happy Pride Month!<br>
                         <bold class="high-light-text-gray">//</bold> You are currently looking at V2 of my Website<br>
-                        <bold class="high-light-text-gray">//</bold> The Template for V2 was made by <a class="saho" href="https://github.com/Luna-devv" target="_blank">Luna</a> on Github<br>
-                        <bold class="high-light-text-gray">//</bold> Want your Website to look like this? <a class="saho" href="https://github.com/Luna-devv/Modern-Website" target="_blank">Get the Template</a><br>
+                        <bold class="high-light-text-gray">//</bold> V2 Template by <a class="saho" href="https://github.com/Luna-devv" target="_blank">Luna</a> on Github<br>
+                        <bold class="high-light-text-gray">//</bold> <a class="saho" href="https://github.com/Luna-devv/Modern-Website" target="_blank">Get the Template</a><br>
                     </p>
                 </div>
                 <a class="pfp">
-                    <img src="./cdn/logo.png" alt="InfoBlock's Profile Picture" class="spicutes" draggable="false">
+                    <img src="./cdn/logo_pride.jpg" alt="InfoBlock's Profile Picture" class="spicutes" draggable="false">
                 </a>
             </div>
         </div>
@@ -116,7 +118,7 @@
 
     <footer id="bottom-footer">
         <div class="center-footer" style="font-size: .8rem;">
-            &copy; InfoBlock 2022 | <a class="aho" href="./terms/">Terms of Service</a> | <a class="aho" href="./privacy/">Privacy Policy</a>
+            &copy; InfoBlock 2022 | <a class="aho" href="./terms/" target="_blank">Terms of Service</a> | <a class="aho" href="./privacy/" target="_blank">Privacy Policy</a>
         </div>
     </footer>
 </html>
