--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <meta name="twitter:site" content="@InfoBlock4" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Web & Discord Bot Dev" />
-        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo_pride.png" />
+        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo_pride.jpg" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Web & Discord Bot Dev' />
-        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo_pride.png' />
+        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo_pride.jpg' />
         <meta name="theme-color" content="#6B21A8" />
 
 
