--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <meta name="twitter:site" content="@InfoBlock4" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Web & Discord Bot Dev" />
-        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo_pride.jpg" />
+        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo.png" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Web & Discord Bot Dev' />
-        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo_pride.jpg' />
+        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo.png' />
         <meta name="theme-color" content="#6B21A8" />
 
 
@@ -22,7 +22,6 @@
         <link rel="stylesheet" href="./css/about-me.css">
         <link rel="stylesheet" href="./css/page.css">
         <link rel="stylesheet" href="./css/cards.css">
-        <link rel="stylesheet" href="./css/pride.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,24 +33,23 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>InfoBlock</title>
-        <link rel="shortcut icon" href="./cdn/logo_pride.jpg" type="image/x-icon">
+        <link rel="shortcut icon" href="./cdn/logo.png" type="image/x-icon">
     </head>
     
     <body style="padding: 0rem;">
         <div class="top-padding">
             <div class="pfp-flex">
                 <div class="md:w-1/2 w-screen text-margin">
-                    <text class="name rainbow-text">InfoBlock</text>
+                    <text class="name">InfoBlock</text>
                     <p class="sub-text">
                         <br><br>
-                        <bold class="high-light-text-gray">//</bold> Happy Pride Month!<br>
                         <bold class="high-light-text-gray">//</bold> You are currently looking at V2 of my Website<br>
                         <bold class="high-light-text-gray">//</bold> V2 Template by <a class="saho" href="https://github.com/Luna-devv" target="_blank">Luna</a> on Github<br>
                         <bold class="high-light-text-gray">//</bold> <a class="saho" href="https://github.com/Luna-devv/Modern-Website" target="_blank">Get the Template</a><br>
                     </p>
                 </div>
                 <a class="pfp">
-                    <img src="./cdn/logo_pride.jpg" alt="InfoBlock's Profile Picture" class="spicutes" draggable="false">
+                    <img src="./cdn/logo.png" alt="InfoBlock's Profile Picture" class="spicutes" draggable="false">
                 </a>
             </div>
         </div>
@@ -110,6 +108,34 @@
                     </p>
                     <p class="card-url">
                         Click here
+                    </p>
+                </div>
+            </a>
+            <a>
+                <div class="card" onclick="window.open('downloads')">
+                    <div style="display: flex;">
+                        <img src="./cdn/Downloads.png" class="card-img" alt="Downloads" draggable="false">
+                        <span class="card-title">Downloads</span>
+                    </div>
+                    <p class="card-desc">
+                        Download some of my Projects for free
+                    </p>
+                    <p class="card-url">
+                        /downloads
+                    </p>
+                </div>
+            </a>
+            <a>
+                <div class="card" onclick="window.open('terminal')">
+                    <div style="display: flex;">
+                        <img src="./cdn/Terminal.jpg" class="card-img" alt="Terminal" draggable="false">
+                        <span class="card-title">Terminal</span>
+                    </div>
+                    <p class="card-desc">
+                        Fool around on my in-browser Terminal
+                    </p>
+                    <p class="card-url">
+                        /terminal
                     </p>
                 </div>
             </a>
