--- a/privacy/index.html
+++ b/privacy/index.html
@@ -8,12 +8,12 @@
         <meta name="twitter:site" content="@InfoBlock3" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Privacy Policy" />
-        <meta name="twitter:image" content="https://i.imgur.com/wyg2pNi.png" />
+        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo.png" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Privacy Policy' />
-        <meta property="og:image" content='https://i.imgur.com/wyg2pNi.png' />
+        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo.png' />
         <meta name="theme-color" content="#6B21A8" />
 
 
