--- a/terminal/admin/index.html
+++ b/terminal/admin/index.html
@@ -12,7 +12,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>InfoBlock</title>
-        <link rel="shortcut icon" href="../cdn/logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../../cdn/logo.png" type="image/x-icon">
     </head>
 
     <body>
