--- a/terminal/index.html
+++ b/terminal/index.html
@@ -17,12 +17,12 @@
         <meta name="twitter:site" content="@InfoBlock4" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Web & Discord Bot Dev" />
-        <meta name="twitter:image" content="https://i.imgur.com/wyg2pNi.png" />
+        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo.png" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Web & Discord Bot Dev' />
-        <meta property="og:image" content='https://i.imgur.com/wyg2pNi.png' />
+        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo.png' />
         <meta name="theme-color" content="#6B21A8" />
 
         <link rel="stylesheet" href="css/style.css">
