--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
         <script type="text/javascript">
             (function() {
                 setTimeout(function() {
-                    window.location="https://infoblock.gq";
+                    window.location="https://infoblock.github.io/Website/";
                 }, 7000)
             })();
         </script>
