Temporary Logo Update
All my Logos will be changed temporarily and changed back in August!

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <meta name="twitter:site" content="@InfoBlock4" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Web & Discord Bot Dev" />
-        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo.png" />
+        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo_de_pl.png" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Web & Discord Bot Dev' />
-        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo.png' />
+        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo_de_pl.png' />
         <meta name="theme-color" content="#6B21A8" />
 
 
@@ -33,7 +33,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>InfoBlock</title>
-        <link rel="shortcut icon" href="./cdn/logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="https://infoblock.github.io/Website/cdn/logo_de_pl.png" type="image/x-icon">
     </head>
     
     <body style="padding: 0rem;">
@@ -49,7 +49,7 @@
                     </p>
                 </div>
                 <a class="pfp">
-                    <img src="./cdn/logo.png" alt="InfoBlock's Profile Picture" class="spicutes" draggable="false">
+                    <img src="https://infoblock.github.io/Website/cdn/logo_de_pl.png" alt="InfoBlock's Profile Picture" class="spicutes" draggable="false">
                 </a>
             </div>
         </div>
