--- a/terms/index.html
+++ b/terms/index.html
@@ -5,15 +5,15 @@
         <meta charset="utf-8" />
         <meta name="description" content="Terms of Service" />
 
-        <meta name="twitter:site" content="@InfoBlock3" />
+        <meta name="twitter:site" content="@InfoBlock4" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Terms of Service" />
-        <meta name="twitter:image" content="https://i.imgur.com/wyg2pNi.png" />
+        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo_de_pl.png" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Terms of Service' />
-        <meta property="og:image" content='https://i.imgur.com/wyg2pNi.png' />
+        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo_de_pl.png' />
         <meta name="theme-color" content="#6B21A8" />
 
 
@@ -22,7 +22,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>InfoBlock</title>
-        <link rel="shortcut icon" href="../cdn/logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="https://infoblock.github.io/Website/cdn/logo_de_pl.png" type="image/x-icon">
     </head>
     
     <body class="pt-40 p-0 bg-gray-900 text-white">
@@ -32,7 +32,7 @@
             <a class="text-gray-500">Terms of Service</a> <br>
         </div>
         <div class="w-1/2 float-right hidden md:block">
-            <img src="../cdn/logo.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
+            <img src="https://infoblock.github.io/Website/cdn/logo_de_pl.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
         </div>
         <div class="px-20 w-screen" id="list">
             <a class="text-gray-400">
