--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ErrorBlock</title>
-        <link rel="shortcut icon" href="https://infoblock.github.io/Website/cdn/logo_de_pl.png" type="image/x-icon">
+        <link rel="shortcut icon" href="https://infoblock.github.io/Website/cdn/logo_de_pl.jpg" type="image/x-icon">
     </head>
     
     <body class="pt-40 p-0 bg-gray-900 text-white">
@@ -19,7 +19,7 @@
             <a class="text-gray-500">404 | Not Found</a> <br>
         </div>
         <div class="w-1/2 float-right hidden md:block">
-            <img src="https://infoblock.github.io/Website/cdn/logo_de_pl.png" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
+            <img src="https://infoblock.github.io/Website/cdn/logo_de_pl.jpg" id="splashIcon" style="border-radius: 20px;" class="overflow-hidden w-64 mx-auto">
         </div>
         <div class="px-20 w-screen" id="list">
             <a class="text-gray-400">
