--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <meta name="twitter:site" content="@InfoBlock4" />
         <meta name="twitter:title" content="InfoBlock" />
         <meta name="twitter:description" content="Web & Discord Bot Dev" />
-        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo_de_pl.png" />
+        <meta name="twitter:image" content="https://infoblock.github.io/Website/cdn/logo_de_pl.jpg" />
 
         <meta property='og:title' content='InfoBlock' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='Web & Discord Bot Dev' />
-        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo_de_pl.png' />
+        <meta property="og:image" content='https://infoblock.github.io/Website/cdn/logo_de_pl.jpg' />
         <meta name="theme-color" content="#6B21A8" />
 
 
@@ -33,7 +33,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>InfoBlock</title>
-        <link rel="shortcut icon" href="https://infoblock.github.io/Website/cdn/logo_de_pl.png" type="image/x-icon">
+        <link rel="shortcut icon" href="https://infoblock.github.io/Website/cdn/logo_de_pl.jpg" type="image/x-icon">
     </head>
     
     <body style="padding: 0rem;">
@@ -44,12 +44,11 @@
                     <p class="sub-text">
                         <br><br>
                         <bold class="high-light-text-gray">//</bold> You are currently looking at V2 of my Website<br>
-                        <bold class="high-light-text-gray">//</bold> V2 Template by <a class="saho" href="https://github.com/Luna-devv" target="_blank">Luna</a> on Github<br>
-                        <bold class="high-light-text-gray">//</bold> <a class="saho" href="https://github.com/Luna-devv/Modern-Website" target="_blank">Get the Template</a><br>
+                        <bold class="high-light-text-gray">//</bold> Provided by <a class="saho" href="https://github.com/Luna-devv" target="_blank">Luna</a> on <a class="saho" href="https://github.com/Luna-devv/Modern-Website" target="_blank">Github</a><br>
                     </p>
                 </div>
                 <a class="pfp">
-                    <img src="https://infoblock.github.io/Website/cdn/logo_de_pl.png" alt="InfoBlock's Profile Picture" class="spicutes" draggable="false">
+                    <img src="https://infoblock.github.io/Website/cdn/logo_de_pl.jpg" alt="InfoBlock's Profile Picture" class="spicutes" draggable="false">
                 </a>
             </div>
         </div>
